<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/f1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/there_is_no_attached_image_or_video"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:visibility="gone"
                android:contentDescription="TODO" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/f2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/intro"
                android:textSize="17sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"

                android:layout_marginBottom="30dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_arrow_forward"
                    app:fabSize="auto"
                    tools:ignore="RtlHardcoded" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_arrow_back"
                    app:fabSize="auto" />

                <TextView
                    android:id="@+id/currentStep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_1_10"
                    android:textSize="20sp" />
            </RelativeLayout>

        </FrameLayout>


    </LinearLayout>

</ScrollView>